tests/Checker/everything/errors/7c.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 0(0)..0(0): *7: invalid lvalue in assignment
Compilation was unsuccessful.
